--- a/index.html
+++ b/index.html
@@ -10,17 +10,22 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Calculadora</title>
 </head>
 
 <body>
 
+    <!-- Contenedor Principal -->
     <main class="container w-25">
+
+        <!-- display -->
         <header class="row mt-5">
             <div class="col">
-                <input class="form-control text-right" type="text" placeholder="0" disabled>
+                <input class="form-control text-right" type="text" placeholder="0" id="display" disabled>
             </div>
         </header>
+
+        <!-- Botones de interacción -->
         <section class="row mt-3">
             <article class="col-12">
                 <div class="btn-toolbar col-" role="toolbar" aria-label="Toolbar with button groups">
@@ -29,9 +34,8 @@
                         <input class="btn btn-primary mr-1" type="button" value="2">
                         <input class="btn btn-primary mr-1" type="button" value="3">
                         <input class="btn btn-primary" type="button" value="4">
-                        
                     </div>
-                    <div class="btn-group w-100 mt-1" role="group" aria-label="First group">
+                    <div class="btn-group w-100 mt-1" role="group" aria-label="Second group">
                        <input class="btn btn-primary mr-1" type="button" value="5">
                        <input class="btn btn-primary mr-1" type="button" value="6">
                        <input class="btn btn-primary mr-1" type="button" value="7">
@@ -43,7 +47,7 @@
                         <input class="btn btn-info font-weight-bold mr-1 pl-3" type="button" value=",">
                         <input class="btn btn-success font-weight-bold pl-2" type="button" value="=">
                     </div>
-                    <div class="btn-group w-100 mt-1" role="group" aria-label="Third group">
+                    <div class="btn-group w-100 mt-1" role="group" aria-label="Four group">
                         <input class="btn btn-warning font-weight-bold mr-1 pr-2" type="button" value="+">
                         <input class="btn btn-warning font-weight-bold mr-1" type="button" value="-">
                         <input class="btn btn-warning font-weight-bold mr-1" type="button" value="/">
