--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- display -->
         <header class="row mt-5">
             <div class="col">
-                <input class="form-control text-right" type="text" placeholder="0" id="display" disabled>
+                <input class="form-control text-right" type="text" placeholder="0" value="" id="display" disabled>
             </div>
         </header>
 
@@ -44,7 +44,7 @@
                     <div class="btn-group w-100 mt-1" role="group" aria-label="Third group">
                         <input class="btn btn-primary mr-1" type="button" value="9">
                         <input class="btn btn-primary mr-1" type="button" value="0">
-                        <input class="btn btn-info font-weight-bold mr-1 pl-3" type="button" value=",">
+                        <input class="btn btn-info font-weight-bold mr-1 pl-3" type="button" value=".">
                         <input class="btn btn-success font-weight-bold pl-2" type="button" value="=">
                     </div>
                     <div class="btn-group w-100 mt-1" role="group" aria-label="Four group">
@@ -61,6 +61,7 @@
     </main>
 
 
+    <script src="js/main.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
@@ -71,7 +72,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
     </script>
-    <script src="js/main.js"></script>
 </body>
 
 </html>
